# TradeEnv

./: .env  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/: fundamentals_snapshot.csv  nifty50_market_data.csv
environment/: tradeenv_environment.py
notebooks/: hackathon_project.ipynb
server/: Dockerfile  __init__.py  app.py  broker_adapters.py  bulkTrade_environment.py  fundamentals.py  models.py  news_sentiment.py  requirements.txt  tradeenv_environment.py
